--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,7 @@ header{
     display: flex;
     /*ensures that the name and the menu is seperated*/
     justify-content: space-between;
+    position:sticky;
 }
 header nav{
     padding-top: 15px;
@@ -80,30 +81,49 @@ a{
     align-items:center;
     
 }
-.flex-column{
+.flex-row{
     display:flex;
+    justify-content: flex-end;
+    
+
+    
 }
 
-/*About Me Section*/
-.about-me{
-
+.section-title{
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        font-size: 30px;
+        display:flex;
+        flex-wrap: wrap;
+        color:#2633ad;
+        padding: 20px;
+        /*makes sure the second word starts at the end*/
+        text-align: end;
+       
+         
 }
+
 .Personal-info{
     font-size: 16px;
     line-height: 1.5;
-    color: #4a35a3;
-    width: 50%;
-    margin: 0 auto;
+    color: rgb(107, 108, 109);
+    
+    margin: 30px 0;
     display:flex;
     flex-wrap:wrap;
-    justify-content: space-around;
-    padding: 20px;
+    justify-content:space-between;
+    border-left: 5px solid #2633ad;
+    padding: 0 0 0 20px;
+  
+
+}
+#about-me{
+    margin:0 auto;
+    width: 80%;
 }
 
 
-/*How do I add the spacing before my name*/
-/*the next part would this be a hero section or is it part of the header*/
-/* is the Contact Me, part of the footer or part of the main */
-/* how do I do the About Me Section and line*/
-/*how do I move my name down*/
-/*how to direct to pdf, do I need to place it into my assets folder and use the path?*/
+
+
+
+
