--- a/assets/style.css
+++ b/assets/style.css
@@ -156,15 +156,14 @@ a:visited{
     
 }
 .work-title{
-    width:30%;
-    padding: 10px 8px 20px;
+    width:80%;
+    padding: 10px 0 20px;
     background-color: gray;
     color:#38393b;
     font-weight: bold;
     font-size: 15px;
     align-items:center;
-    margin: 0  15px 15px 0
-    font-size: 12px;
+    margin: 0  15px 15px 0;
 
 }
 
@@ -204,10 +203,17 @@ a:visited{
 .run-buddy{
     background-image: url('./images/Run Buddy Image.png');
     width: 100%;
-    height: 400px;    
+    height: 400px;
+    display:flex;
+    align-items:flex-end;
+    background-size: 100% 100%; 
+ 
 }
 .horiseon{
     background-image:url('./images/Horiseon IMG.png'); 
+    display:flex;
+    align-items:flex-end;
+    background-size: 100% 100%; 
 }
 .movie-analytics{
     background-image:url('./images/pexels-felix-mittermeier-956981.jpg');
@@ -221,7 +227,7 @@ a:visited{
 .content{
     width: 75%;
 }
-
+/*screenshot extension*/
 
 /*How do my links open up to the correct link*/
-/*
+/*How to do the resizing*/
