--- a/assets/style.css
+++ b/assets/style.css
@@ -159,7 +159,7 @@ a:visited{
     
 }
 .work-title{
-    width:80%;
+    width:100%;
     padding: 10px 0 20px;
     background-color: gray;
     color:#38393b;
@@ -203,10 +203,17 @@ a:visited{
     align-items:flex-end;
     
 }
+.nationalTrip{
+    background-image: url('./images/National-Trip-Planner.png');
+    width: 100%;
+    height: 300px;
+    display:flex;
+    align-items:flex-end;
+    background-size: 100% 100%; 
+ 
+}
 .run-buddy{
     background-image: url('./images/Run Buddy Image.png');
-    width: 100%;
-    height: 400px;
     display:flex;
     align-items:flex-end;
     background-size: 100% 100%; 
